--- a/AssetManager/AssetManager/AssetManager.vcxproj.filters
+++ b/AssetManager/AssetManager/AssetManager.vcxproj.filters
@@ -18,6 +18,12 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AssetManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="media\data\LPCMap.csv" />
@@ -47,5 +53,13 @@
   <ItemGroup>
     <Font Include="media\fonts\sansation.ttf" />
     <Font Include="media\fonts\arial.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Game.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\AssetManager.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
